# advent_of_code

./: .config.cfg  .editorconfig  .gitignore  .pre-commit-config.yaml  .setup.cfg  LICENSE  README.md  day8.txt  main.py  main_old.py  pyproject.toml  settings.ini  setup_proj.py  test.py
common/: checker.py  settings.py  util.py  util_old.py
input/22/: test
py/: day1.py  day2.py  day3.py  script_example.txt  util.py
py/21/: day01.py  day02.py
py/22/: blank.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py
py/23/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py
py/24/: day01.py  day02.py  day03.py
src/aoc/: aoc_client.py  lxml_utils.py
src/aoc/src/cached_html/22/: dayday01.html.html
src/cached_html/2022/: day1.html  day2.html  day3.html  day4.html  day5.html
src/cached_html/22/: day01.html  day01_2.html  day02.html  day02_2.html  day03.html  day03_2.html  day04.html  day04_2.html  day05.html  day05_2.html  day06.html  day06_2.html  day07.html  day07_2.html  day08.html  day08_2.html  day09.html  day09_2.html  day10.html
src/cached_html/23/: day01_1.html  day01_2.html  day02_1.html  day02_2.html  day03_1.html  day03_2.html  day04_1.html  day04_2.html  day05_1.html  day05_2.html  day06_1.html  day06_2.html  day07_1.html  day07_2.html  day08_1.html  day08_2.html  day09_1.html  day09_2.html  day10_1.html  day10_2.html
src/common/: aoc_client.py  checker.py  configs.py  display.py  exceptions.py  settings.py  setup_project.py  util.py  utils.py
src/input/24/: day03_sample_1.txt  day03_sample_2.txt
src/results/: result.json
test/: tests.py
tests/: tests.py
utils/: get_data.py
