[tool.poetry]
name = "advent_of_code"
version = "1.1"
description = "Yearly AOC contest"
authors = ["Vasile-Hij <vasile.hijs@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipdb = "^0.13.9"
black = "^23.3.0"
setuptools = "^67.7.0"
poetry-plus = "^0.11.4"
ruff = "^0.0.263"
python-dateutil = "^2.8.2"
decorator = "^5.1.1"
ipython = "^8.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line too long
]
exclude = [
  ".venv",
  "venv"
]