[tool.poetry]
name = "advent_of_code"
version = "1.2"
description = "Yearly AOC contest"
authors = ["Vasile-Hij <vasile.hijs@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipython = "8.*"
ipdb = "0.*"
black = "^23.3.0"
setuptools = "^68.0.0"
poetry-plus = "^0.11.4"
ruff = "^0.1.4"
python-dateutil = "^2.8.2"
decorator = "^5.1.1"
# ipython = "^8.17"  # error on pywinty due no binary version python 3.11
twine = "^4.0"
pre-commit = "^3.1.0"
watchdog = {extras = ["watchmedo"], version = "^3.0.0"}
browser-cookie3 = "^0.19.1"
cssselect = "^1.2.0"
lxml = "^4.9.3"

[tool.black]
line-length = 100
target-version = "py311"
skip-string-normalization = true


[tool.ruff]
line-length = 100
extend-select = ['Q']
flake8-quotes = {inline-quotes = 'single', multiline-quotes = 'double'}


select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line too long
]
exclude = [
  ".venv",
  "venv"
]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 15 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[virtualenvs]
create = true
in-project = true