[tool.poetry]
name = "aoc"
version = "1.2"
description = "Yearly AOC contest"
authors = ["Vasile-Hij <vasile.hijs@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.18.1"
ipdb = {version="0.*", optional = true}
black = "^23.3.0"
setuptools = "^69.0.2"
poetry-plus = "^0.11.4"
ruff = "^0.1.4"
python-dateutil = "^2.8.2"
decorator = "^5.1.1"
# ipython = "^8.17"  # error on pywinty due no binary version python 3.11
twine = "^4.0"
pre-commit = "^3.1.0"
watchdog = {extras = ["watchmedo"], version = "^3.0.0"}
browser-cookie3 = "^0.19.1"
cssselect = "^1.2.0"
lxml = "^4.9.3"
termcolor = "^2.3"

[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = true


[tool.ruff]
line-length = 100
extend-select = ['Q']
flake8-quotes = {inline-quotes = 'single', multiline-quotes = 'double'}
select = [
    "E", # pycodestyle
    "W", # pycodestyle
    "F", # pyflakes
    "C", # mccabe (complexity)
    "PL", # pylint. Activating this activates everything: PLC PLE PLR etc
    "YTT", # flake8-2020
    "T10", # ipdb
    "DJ", # flake8-django
    "EXE", # flake8-executable
    "ICN", # flake8-import-conventions
    "PYI", # flake8-pyi
    "TID", # flake8-tidy-imports
    "INT", # flake8-gettext
    "NPY", # NumPy-specific rules
    "PGH", # pygrep-hooks
    "PD", # pandas-vet
    "RSE", # flake8-raise
    "PIE", # flake8-pie - easy
    "ISC", # flake8-implicit-str-concat - easy
    "INP", # flake8-no-pep420
    "C4", # flake8-comprehensions
    "RUF", # ruff specific rules
    "SIM", # flake8-simplify
    "PTH", # flake8-pathlib
#    "BLE", # flake8-blind-except - easy
    "A", # flake8-builtin
]
ignore = [
  "E501",  # line too long
]
exclude = [
  ".venv",
  "venv"
]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 15 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[virtualenvs]
create = true
in-project = true

[tool.ipdb]
contenxt = 10

# [tool.poetry.extras]  # extras - additional functions of your package during runtime. 
# debug = ["ipdb"]

 [tool.poetry.dev-dependencies]  # during development
 ipdb = {version="0.*", optional = true}